fix: FastAPI에서 소개글 업데이트 전에 animal_matrix도 업데이트 하도록 수정

--- a/src/main/resources/templates/lock_account.html
+++ b/src/main/resources/templates/lock_account.html
@@ -18,7 +18,7 @@
             <p style="margin: 5px 0;">ForPaw business&nbsp;&nbsp;&nbsp;</p>
             <hr style="border-color: #ffffff;">
             <p style="margin: 5px 0;">본 메일은 발신전용 메일입니다.</p>
-            <p style="margin: 5px 0;">사업자등록번호: 123-45-67890 | 통신판매업 신고번호: 제 2024-PNU-006 | 대표이사: 이근섭</p>
+            <p style="margin: 5px 0;">사업자등록번호: 123-45-67890 | 통신판매업 신고번호: 제 2024-PNU-006 | 대표이사: 이한홍</p>
             <p style="margin: 5px 0;">개인정보보호책임자: 호얘이 | 주소: 부산광역시 금정구 장전동 부산대학교 제 6공학관 | (주)ForPaw </p>
             <p style="margin: 5px 0;">Copyright © ForPaw Corp. All rights reserved.</p>
         </div>
